<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_auto_awesome_mosaic_24"
        android:title="@string/feed" />
    <item
        android:id="@+id/favFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favourites" />
    <item
        android:id="@+id/userFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_note_add_24"
        android:title="@string/meal_plan" />
</menu>