<!-- activity_create_recipe.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_20sdp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_back"
                    app:tint="@color/black" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/create_meal"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/recipe_title"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/regular"
                    android:hint="@string/type_your_recipe_name_here"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/add_image_here"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_recipe_image"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/dotted"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/_10sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera" />


                    <TextView
                        android:id="@+id/imgAlt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_80sdp"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/add_cover_image"
                        android:textSize="@dimen/_10sdp" />


                </RelativeLayout>

                <Button
                    android:id="@+id/btn_upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/upload_image" />

                <RadioGroup
                    android:id="@+id/radio_group_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/radio_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/privateString"
                        android:visibility="gone"/>

                    <RadioButton
                        android:id="@+id/radio_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publicString" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/add_description"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/regular"
                    android:gravity="start"
                    android:hint="@string/add_descriptiction_here"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/select_cuisine_type"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinner_cuisine_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/select_cuisine"
                    android:padding="@dimen/_10sdp"
                    android:theme="@style/spinnerTheme" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/et_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableStart="@drawable/ic_add"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/regular"
                    android:gravity="start"
                    android:hint="@string/ingredients"
                    android:padding="@dimen/_8sdp"
                    android:textAllCaps="false"

                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_dietary_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableStart="@drawable/ic_add"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/regular"
                    android:gravity="start"
                    android:hint="@string/dietary_tags"
                    android:padding="@dimen/_8sdp"
                    android:editable="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


                <EditText
                    android:id="@+id/et_mealType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableStart="@drawable/ic_add"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/type"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/select_meal_type"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinner_meal_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/meal_type"
                    android:padding="@dimen/_10sdp"
                    android:theme="@style/spinnerTheme" />


                <TextView
                    android:visibility="gone"
                    android:id="@+id/et_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/bold"
                    android:inputType="number"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/quantity"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/btn_decrement"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/decrement_button_description"
                        android:src="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/btn_increment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/increment_button_description"
                        android:src="@drawable/ic_add"
                        android:tint="@color/black" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_save_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_recipe" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
